--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.27.1"}
-pydantic = "^2.6.3"
+pydantic = {extras = ["email"], version = "^2.6.3"}
 sqlalchemy = "^2.0.27"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.9"
