--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = {extras = ["email"], version = "^2.6.3"}
 sqlalchemy = "^2.0.27"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
